# precious

./: .clang-format  .cmake-format.yaml  .gitignore  .vscodeignore  CMakeLists.txt  README.md  build_and_test.sh  index.html  language-configuration.json  out.asm  out.c  package.json  run_tests.sh  test.asm
src/: arena.hpp  ast.hpp  generation.hpp  main.cpp  parser.hpp  test.precious  tokenization.hpp
syntaxes/: precious.tmLanguage.json
tests/: 01_basic_add.precious  02_basic_sub.precious  03_basic_mul.precious  04_basic_div.precious  05_literal_exit.precious  06_inline_expr.precious  07_precedence_mul_add.precious  08_parens_override.precious  09_mixed_precedence.precious  10_scope_access.precious  11_scope_inner_var.precious  11_scope_shadow.precious  12_if_true.precious  13_if_false_else.precious  14_if_elif_else.precious  15_multi_elif.precious  16_comments.precious  17_complex_arithmetic.precious  18_var_in_expr.precious  19_nested_scopes.precious  20_if_with_inner_var.precious  21_sub_chain.precious  22_mul_chain.precious  23_all_false_else.precious  24_if_true_with_var.precious  25_if_else_stack_bug.precious  26_scope_exit_val.precious  27_nested_if.precious  28_if_true_elif_skip.precious  29_div_var.precious  30_parens_multiply.precious  31_while_basic.precious  32_say_basic.precious  33_fn_basic.precious  34_fn_say.precious  35_fn_multiple.precious  36_fn_call_in_expr.precious  36_fn_with_vars.precious  37_fn_call_in_say.precious  37_fn_with_vars.precious  (+33 more)
tests/dsa/: 01_kadane.precious  02_container_most_water.precious  03_best_time_buy_sell.precious  (+7 more)
